fix(frontend): Refactor landing page
This wasn't really a pressing issue until recently, but the landing page's "View All" layout was in need of a better structure.

The "Add New" button (the dashed box with the cross in the middle) would always be added to the end of the items because it was inside the same container. This meant that users would have to scroll to the botom of the saved items to get to the button. Now, it has been taken out of the container and positioned so that it is always on the right, no matter how many items are saved.

The container with the items not has a max-height and scrolls, so that the page doesn't distort when more items are added. They are also now left-justifued, so that they display in a more ordered manner.

lastly, the banner containing the logo (and possbly the accounts icon in the future) shared the width of the items container, meaning it would move closer to the middle of the screen if there were 3 or less saved items. This looked bad, so it's been fixed to 100% width at all times.

--- a/client/src/landing/landing.module.css
+++ b/client/src/landing/landing.module.css
@@ -2,7 +2,14 @@
   display: flex;
   justify-content: center;
   height: 100%;
+  min-width: 75%;
   background-color: #fff;
+}
+
+.header,
+.itemLayout {
+  display: flex;
+  justify-content: space-between;
 }
 
 .landingContent {
@@ -12,18 +19,28 @@
   align-items: center;
   position: relative;
   min-height: 100%;
+  width: 100%;
+  max-width: 85rem;
   background-color: #fff;
   color: #101010;
   padding: 0 2.5rem;
 }
 
 .banner,
-.header,
-.items,
-.buttonContainer {
+.items {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
   width: 100%;
+}
+
+.items {
+  flex-wrap: wrap;
+  overflow: overlay;
+  max-height: 35rem;
+}
+
+.items::-webkit-scrollbar {
+  display: none;
 }
 
 .icon,
@@ -140,14 +157,6 @@
 .button {
   width: 15rem;
   margin-bottom: 1rem;
-}
-
-.viewAllItems {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  align-content: space-between;
-  justify-content: space-evenly;
 }
 
 /* ORIGINAL STYLES */
